--- a/probalance.webflow.io/blog.html
+++ b/probalance.webflow.io/blog.html
@@ -260,7 +260,6 @@
                 <div data-w-id="ad4ba74a-9900-79b3-7c64-0b5ae94a4686" style="opacity:0"
                   class="blog-top-content is-blog">
                   <h2 class="heading-style-h2">Take a look at tha latest articles</h2>
-                  <div class="text-size-regular">Risus vitae penatibus consequat pellentesque consequat tempor.</div>
                 </div>
               </div>
               <div class="padding-bottom padding-large"></div>
@@ -451,8 +450,7 @@
               <div id="w-node-bde9efe0-efa4-6791-4c9c-683e7823abb9-7823abab" class="footer-left-content-wrapper">
                 <div class="footer-content">
                   <h5 class="heading-style-h5 text-color-white">Newsletter</h5>
-                  <p class="text-size-tiny text-color-white-300">Rorem ipsum dolor sit amet consectetur. Nisl urna
-                    dignissim ultricies lobortis.</p>
+                  <p class="text-size-tiny text-color-white-300">Subscribe to our newsletter.</p>
                 </div>
                 <div class="footer-form-block w-form">
                   <form id="email-form" name="email-form" data-name="Email Form" method="get" class="footer-form"
@@ -472,12 +470,10 @@
               <div id="w-node-bde9efe0-efa4-6791-4c9c-683e7823abc9-7823abab" class="footer-link-list-wrapper">
                 <div class="footer-header-text">Pages</div>
                 <div class="footer-link-list"><a href="index.html" class="footer-link">Home</a><a href="about.html"
-                    class="footer-link">About</a><a href="pricing.html" class="footer-link">Pricing</a><a
-                    href="product/basic-plan.html" class="footer-link">Pricing single</a><a href="contact-page.html"
-                    class="footer-link">Contact</a><a href="team.html" class="footer-link">Team</a><a
-                    href="team-member/sarah-mitchell-mba-2.html" class="footer-link">Team details</a></div>
+                    class="footer-link">About</a><a href="pricing.html" class="footer-link">Pricing</a><a href="contact-page.html"
+                    class="footer-link">Contact</a><a href="team.html" class="footer-link">Team</a></div>
               </div>
-              <div id="w-node-bde9efe0-efa4-6791-4c9c-683e7823abdb-7823abab" class="footer-link-list-wrapper">
+              <!-- <div id="w-node-bde9efe0-efa4-6791-4c9c-683e7823abdb-7823abab" class="footer-link-list-wrapper">
                 <div class="footer-header-text">CMS pages</div>
                 <div class="footer-link-list"><a href="blog.html" aria-current="page"
                     class="footer-link w--current">Blog posts</a><a
@@ -493,7 +489,7 @@
                     href="change-log.html" class="footer-link">Changelog</a><a href="license.html"
                     class="footer-link">Licenses</a><a href="404.html" class="footer-link">Protected</a><a
                     href="401.html" class="footer-link">404 not found</a></div>
-              </div>
+              </div> -->
             </div>
             <div class="footer-line"></div>
             <div class="footer-bottom-content">
