--- a/probalance.webflow.io/contact-page.html
+++ b/probalance.webflow.io/contact-page.html
@@ -261,31 +261,30 @@
                   class="contact-left-content-wrapper">
                   <div class="contact-content">
                     <h2 class="heading-style-h2">Contact us</h2>
-                    <p class="text-size-regular text-color-black-800">In amet quis faucibus ante enim ut tellus. Massa
-                      phasellus ultricies vel nunc condimentum id.</p>
+                    <p class="text-size-regular text-color-black-800">Let's help your business stay in the spotlight and gain competitive advantage.</p>
                   </div>
                   <div class="quick-contact-card-wrapper">
                     <div class="quick-contact-card">
-                      <h6 class="heading-style-h6">Message Us</h6><a href="mailto:example@email.com"
+                      <h6 class="heading-style-h6">Message Us</h6><a href="mailto:contact@teranium.co"
                         class="quick-contact w-inline-block"><img
                           src="../cdn.prod.website-files.com/665d34b45136fb900ef58460/665ec89358ec9e259d5fa009_Copy%20Icon.svg"
                           loading="lazy" alt="" />
-                        <div class="text-size-regular text-color-black-800">example@email.com</div>
+                        <div class="text-size-regular text-color-black-800">contact@teranium.co</div>
                       </a>
                     </div>
                     <div class="quick-contact-card">
-                      <h6 class="heading-style-h6">Call us</h6><a href="tel:+8801704013333"
+                      <h6 class="heading-style-h6">Call us</h6><a href="tel:(+234) 909 542 2272"
                         class="quick-contact w-inline-block"><img
                           src="../cdn.prod.website-files.com/665d34b45136fb900ef58460/665ec89358ec9e259d5fa009_Copy%20Icon.svg"
                           loading="lazy" alt="" />
-                        <div class="text-size-regular text-color-black-800">+880 1704013333</div>
+                        <div class="text-size-regular text-color-black-800">(+234) 909 542 2272</div>
                       </a>
                     </div>
                     <div class="quick-contact-card">
                       <h6 class="heading-style-h6">Address</h6><a
                         href="https://www.google.com/maps/@24.8158893,89.0251227,11.84z?entry=ttu"
                         class="quick-contact w-inline-block">
-                        <div class="text-size-regular text-color-black-800">+43 wallaby way, sydney</div>
+                        <div class="text-size-regular text-color-black-800">11A Colliery Ave, GRA, Enugu 400102, Enugu</div>
                       </a>
                     </div>
                   </div>
@@ -413,8 +412,7 @@
               <div id="w-node-bde9efe0-efa4-6791-4c9c-683e7823abb9-7823abab" class="footer-left-content-wrapper">
                 <div class="footer-content">
                   <h5 class="heading-style-h5 text-color-white">Newsletter</h5>
-                  <p class="text-size-tiny text-color-white-300">Rorem ipsum dolor sit amet consectetur. Nisl urna
-                    dignissim ultricies lobortis.</p>
+                  <p class="text-size-tiny text-color-white-300">Subscribe to our newsletter.</p>
                 </div>
                 <div class="footer-form-block w-form">
                   <form id="email-form" name="email-form" data-name="Email Form" method="get" class="footer-form"
@@ -434,13 +432,11 @@
               <div id="w-node-bde9efe0-efa4-6791-4c9c-683e7823abc9-7823abab" class="footer-link-list-wrapper">
                 <div class="footer-header-text">Pages</div>
                 <div class="footer-link-list"><a href="index.html" class="footer-link">Home</a><a href="about.html"
-                    class="footer-link">About</a><a href="pricing.html" class="footer-link">Pricing</a><a
-                    href="product/basic-plan.html" class="footer-link">Pricing single</a><a href="contact-page.html"
+                    class="footer-link">About</a><a href="pricing.html" class="footer-link">Pricing</a><a href="contact-page.html"
                     aria-current="page" class="footer-link w--current">Contact</a><a href="team.html"
-                    class="footer-link">Team</a><a href="team-member/sarah-mitchell-mba-2.html" class="footer-link">Team
-                    details</a></div>
+                    class="footer-link">Team</a></div>
               </div>
-              <div id="w-node-bde9efe0-efa4-6791-4c9c-683e7823abdb-7823abab" class="footer-link-list-wrapper">
+              <!-- <div id="w-node-bde9efe0-efa4-6791-4c9c-683e7823abdb-7823abab" class="footer-link-list-wrapper">
                 <div class="footer-header-text">CMS pages</div>
                 <div class="footer-link-list"><a href="blog.html" class="footer-link">Blog posts</a><a
                     href="blog/the-importance-of-financial-transparency-in-business-success.html"
@@ -455,7 +451,7 @@
                     href="change-log.html" class="footer-link">Changelog</a><a href="license.html"
                     class="footer-link">Licenses</a><a href="404.html" class="footer-link">Protected</a><a
                     href="401.html" class="footer-link">404 not found</a></div>
-              </div>
+              </div> -->
             </div>
             <div class="footer-line"></div>
             <div class="footer-bottom-content">
