--- a/probalance.webflow.io/pricing.html
+++ b/probalance.webflow.io/pricing.html
@@ -260,19 +260,18 @@
                 <div data-w-id="06aedbc2-c732-623f-37b6-56553ef0287a" style="opacity:0"
                   class="price-top-content-wrapper">
                   <h2 class="heading-style-h2">Choose the right plan for your business</h2>
-                  <div class="text-size-regular">Risus vitae penatibus consequat pellentesque consequat tempor.</div>
                 </div>
                 <div class="padding-bottom padding-large"></div>
                 <div data-w-id="06aedbc2-c732-623f-37b6-56553ef02880" style="opacity:0" data-current="Tab 3"
                   data-easing="ease" data-duration-in="300" data-duration-out="100" class="price-tabs w-tabs">
-                  <div class="price-tabs-menu w-tab-menu"><a data-w-tab="Tab 1"
+                  <!-- <div class="price-tabs-menu w-tab-menu"><a data-w-tab="Tab 1"
                       class="price-tab-link w-inline-block w-tab-link">
-                      <div>Monthly</div>
+                      <div>Monthly</div> -->
                     </a><a data-w-tab="Tab 3" class="price-tab-link w-inline-block w-tab-link w--current">
                       <div>Yearly</div>
                     </a></div>
                   <div class="price-tabs-content w-tab-content">
-                    <div data-w-tab="Tab 1" class="price-tabs-pane w-tab-pane">
+                    <!-- <div data-w-tab="Tab 1" class="price-tabs-pane w-tab-pane">
                       <div class="w-layout-grid price-grid">
                         <div id="w-node-_06aedbc2-c732-623f-37b6-56553ef0288b-f429546b" class="price-card">
                           <div class="price-card-top-content-wrapper"><img loading="lazy"
@@ -371,7 +370,7 @@
                           </div>
                         </div>
                       </div>
-                    </div>
+                    </div> -->
                     <div data-w-tab="Tab 3" class="price-tabs-pane w-tab-pane w--tab-active">
                       <div class="w-layout-grid price-grid">
                         <div id="w-node-_06aedbc2-c732-623f-37b6-56553ef028e4-f429546b" class="price-card">
@@ -384,25 +383,25 @@
                             </div>
                           </div>
                           <div class="price-content-wrapper">
-                            <h2 class="heading-style-h2 is-price">$500<span
-                                class="text-size-regular text-color-is-black-900">/month</span></h2><a
-                              href="product/basic-plan.html" class="button w-button">Get started</a>
+                            <h2 class="heading-style-h2 is-price">₦250k<span
+                                class="text-size-regular text-color-is-black-900">/year</span></h2><a
+                              href="contact-page.html" class="button w-button">Get started</a>
                           </div>
                           <div class="price-feature-list-wrapper">
                             <ul role="list" class="price-feature-list">
                               <li class="price-feature-list-item">
-                                <div class="text-size-tiny text-color-is-black-900">Bookkeeping and monthly financial.
+                                <div class="text-size-tiny text-color-is-black-900">Ideal for budding businesses.
                                 </div>
                               </li>
                               <li>
-                                <div class="text-size-tiny text-color-is-black-900">Payroll processing</div>
+                                <div class="text-size-tiny text-color-is-black-900">A business website and a custom enterprise.</div>
                               </li>
                               <li>
-                                <div class="text-size-tiny text-color-is-black-900">Basic tax preparation</div>
+                                <div class="text-size-tiny text-color-is-black-900">Virtual Support.</div>
                               </li>
-                              <li>
+                              <!-- <li>
                                 <div class="text-size-tiny text-color-is-black-900">Email support</div>
-                              </li>
+                              </li> -->
                             </ul>
                           </div>
                         </div>
@@ -416,24 +415,24 @@
                             </div>
                           </div>
                           <div class="price-content-wrapper">
-                            <h2 class="heading-style-h2 is-price">$1000<span
-                                class="text-size-regular text-color-is-black-900">/month</span></h2><a
-                              href="product/standard-plan.html" class="button w-button">Get started</a>
+                            <h2 class="heading-style-h2 is-price">₦500k<span
+                                class="text-size-regular text-color-is-black-900">/year</span></h2><a
+                              href="contact-page.html" class="button w-button">Get started</a>
                           </div>
                           <div class="price-feature-list-wrapper">
                             <ul role="list" class="price-feature-list">
                               <li class="price-feature-list-item">
-                                <div class="text-size-tiny text-color-is-black-900">Bookkeeping and monthly financial.
+                                <div class="text-size-tiny text-color-is-black-900">Ideal for mid-sized business.
                                 </div>
                               </li>
                               <li>
-                                <div class="text-size-tiny text-color-is-black-900">Payroll processing</div>
+                                <div class="text-size-tiny text-color-is-black-900">Includes a business website and advanced custom enterprise solution.</div>
                               </li>
                               <li>
-                                <div class="text-size-tiny text-color-is-black-900">Basic tax preparation</div>
+                                <div class="text-size-tiny text-color-is-black-900">Virtual Support</div>
                               </li>
                               <li>
-                                <div class="text-size-tiny text-color-is-black-900">Email support</div>
+                                <div class="text-size-tiny text-color-is-black-900">On-demand routine visit</div>
                               </li>
                             </ul>
                           </div>
@@ -448,24 +447,27 @@
                             </div>
                           </div>
                           <div class="price-content-wrapper">
-                            <h2 class="heading-style-h2 is-price">$2000<span
-                                class="text-size-regular text-color-is-black-900">/month</span></h2><a
-                              href="product/premium-plan.html" class="button w-button">Get started</a>
+                            <h2 class="heading-style-h2 is-price">₦1m<span
+                                class="text-size-regular text-color-is-black-900">/year</span></h2><a
+                              href="contact-page.html" class="button w-button">Get started</a>
                           </div>
                           <div class="price-feature-list-wrapper">
                             <ul role="list" class="price-feature-list">
                               <li class="price-feature-list-item">
-                                <div class="text-size-tiny text-color-is-black-900">Bookkeeping and monthly financial.
+                                <div class="text-size-tiny text-color-is-black-900">Ideal for medium to large businesses.
                                 </div>
                               </li>
                               <li>
-                                <div class="text-size-tiny text-color-is-black-900">Payroll processing</div>
+                                <div class="text-size-tiny text-color-is-black-900">Includes a business website and multiple advanced custom enterprise solutions.</div>
                               </li>
                               <li>
-                                <div class="text-size-tiny text-color-is-black-900">Basic tax preparation</div>
+                                <div class="text-size-tiny text-color-is-black-900">Virtual Support</div>
                               </li>
                               <li>
-                                <div class="text-size-tiny text-color-is-black-900">Email support</div>
+                                <div class="text-size-tiny text-color-is-black-900">On-demand routine visits.</div>
+                              </li>
+                              <li>
+                                <div class="text-size-tiny text-color-is-black-900">1x monthly routine visits.</div>
                               </li>
                             </ul>
                           </div>
@@ -586,12 +588,10 @@
                 <div class="footer-header-text">Pages</div>
                 <div class="footer-link-list"><a href="index.html" class="footer-link">Home</a><a href="about.html"
                     class="footer-link">About</a><a href="pricing.html" aria-current="page"
-                    class="footer-link w--current">Pricing</a><a href="product/basic-plan.html"
-                    class="footer-link">Pricing single</a><a href="contact-page.html" class="footer-link">Contact</a><a
-                    href="team.html" class="footer-link">Team</a><a href="team-member/sarah-mitchell-mba-2.html"
-                    class="footer-link">Team details</a></div>
+                    class="footer-link w--current">Pricing</a><a href="contact-page.html" class="footer-link">Contact</a><a
+                    href="team.html" class="footer-link">Team</a></div>
               </div>
-              <div id="w-node-bde9efe0-efa4-6791-4c9c-683e7823abdb-7823abab" class="footer-link-list-wrapper">
+              <!-- <div id="w-node-bde9efe0-efa4-6791-4c9c-683e7823abdb-7823abab" class="footer-link-list-wrapper">
                 <div class="footer-header-text">CMS pages</div>
                 <div class="footer-link-list"><a href="blog.html" class="footer-link">Blog posts</a><a
                     href="blog/the-importance-of-financial-transparency-in-business-success.html"
@@ -606,7 +606,7 @@
                     href="change-log.html" class="footer-link">Changelog</a><a href="license.html"
                     class="footer-link">Licenses</a><a href="404.html" class="footer-link">Protected</a><a
                     href="401.html" class="footer-link">404 not found</a></div>
-              </div>
+              </div> -->
             </div>
             <div class="footer-line"></div>
             <div class="footer-bottom-content">
