--- a/probalance.webflow.io/service.html
+++ b/probalance.webflow.io/service.html
@@ -270,14 +270,14 @@
                   <div role="list" class="service-collection-list w-dyn-items">
                     <div role="listitem" class="service-collection-list-item w-dyn-item"><a
                         data-w-id="05d01ac5-14be-6d7e-0263-2a06a425938d"
-                        href="service/financial-statement-preparation.html" class="service-card w-inline-block">
+                        href="service/blockchain.html" class="service-card w-inline-block">
                         <div class="service-content-wrapper">
                           <div class="service-image-wrapper"><img
                               style="-webkit-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)"
                               loading="lazy" alt=""
-                              src="../cdn.prod.website-files.com/665d35c81c0aabc1cd692224/665ec33cdb8ab0f384ee57b9_Service%20Thumbnail%20Image%206.png"
+                              src="../cdn.prod.website-files.com/665d35c81c0aabc1cd692224/blockchain.jpg" height="230px" width="400px"
                               class="service-image" /></div>
-                          <h5 class="heading-style-h5">Financial Statement Preparation</h5>
+                          <h5 class="heading-style-h5">Blockchain</h5>
                         </div>
                         <div class="service-bottom-content">
                           <div
@@ -299,9 +299,9 @@
                           <div class="service-image-wrapper"><img
                               style="-webkit-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)"
                               loading="lazy" alt=""
-                              src="../cdn.prod.website-files.com/665d35c81c0aabc1cd692224/665ec31021b104edb6ed793c_Service%20Thumbnail%20Image%205.png"
+                              src="../cdn.prod.website-files.com/665d35c81c0aabc1cd692224/TaeJune15.jpg" height="230px" width="400px"
                               class="service-image" /></div>
-                          <h5 class="heading-style-h5">Tax Planning and Preparation</h5>
+                          <h5 class="heading-style-h5">Artifical Intelligence (AI)</h5>
                         </div>
                         <div class="service-bottom-content">
                           <div
@@ -317,15 +317,15 @@
                         </div>
                       </a></div>
                     <div role="listitem" class="service-collection-list-item w-dyn-item"><a
-                        data-w-id="05d01ac5-14be-6d7e-0263-2a06a425938d" href="service/bookkeeping.html"
+                        data-w-id="05d01ac5-14be-6d7e-0263-2a06a425938d" href="service/iot.html"
                         class="service-card w-inline-block">
                         <div class="service-content-wrapper">
                           <div class="service-image-wrapper"><img
                               style="-webkit-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)"
                               loading="lazy" alt=""
-                              src="../cdn.prod.website-files.com/665d35c81c0aabc1cd692224/665ec2e83facec5a9414c919_Service%20Thumbnail%20Image%204.png"
+                              src="../cdn.prod.website-files.com/665d35c81c0aabc1cd692224/futuristic-smart-city-with-5g-global-network-technology.jpg" height="230px" width="400px"
                               class="service-image" /></div>
-                          <h5 class="heading-style-h5">Bookkeeping </h5>
+                          <h5 class="heading-style-h5">Internet of Things (IOT)</h5>
                         </div>
                         <div class="service-bottom-content">
                           <div
@@ -341,15 +341,15 @@
                         </div>
                       </a></div>
                     <div role="listitem" class="service-collection-list-item w-dyn-item"><a
-                        data-w-id="05d01ac5-14be-6d7e-0263-2a06a425938d" href="service/software-integration.html"
+                        data-w-id="05d01ac5-14be-6d7e-0263-2a06a425938d" href="service/web_app.html"
                         class="service-card w-inline-block">
                         <div class="service-content-wrapper">
                           <div class="service-image-wrapper"><img
                               style="-webkit-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)"
                               loading="lazy" alt=""
-                              src="../cdn.prod.website-files.com/665d35c81c0aabc1cd692224/665ec2c500958474a1cfe010_Service%20Thumbnail%20Image%203.png"
+                              src="../cdn.prod.website-files.com/665d35c81c0aabc1cd692224/representations-user-experience-interface-design.jpg" height="230px" width="400px"
                               class="service-image" /></div>
-                          <h5 class="heading-style-h5">Software Integration</h5>
+                          <h5 class="heading-style-h5">Enterprise Web Application</h5>
                         </div>
                         <div class="service-bottom-content">
                           <div
@@ -365,15 +365,15 @@
                         </div>
                       </a></div>
                     <div role="listitem" class="service-collection-list-item w-dyn-item"><a
-                        data-w-id="05d01ac5-14be-6d7e-0263-2a06a425938d" href="service/payroll-processing.html"
+                        data-w-id="05d01ac5-14be-6d7e-0263-2a06a425938d" href="service/mobile_app.html"
                         class="service-card w-inline-block">
                         <div class="service-content-wrapper">
                           <div class="service-image-wrapper"><img
                               style="-webkit-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)"
                               loading="lazy" alt=""
-                              src="../cdn.prod.website-files.com/665d35c81c0aabc1cd692224/665ec2b8b53d86e3f9c81cf7_Service%20Thumbnail%20Image%202.png"
+                              src="../cdn.prod.website-files.com/665d35c81c0aabc1cd692224/technology-meets-nature-with-smart-phone-generative-ai.jpg" height="230px" width="400px"
                               class="service-image" /></div>
-                          <h5 class="heading-style-h5">Payroll processing</h5>
+                          <h5 class="heading-style-h5">Mobile Apps</h5>
                         </div>
                         <div class="service-bottom-content">
                           <div
@@ -388,7 +388,7 @@
                           </div>
                         </div>
                       </a></div>
-                    <div role="listitem" class="service-collection-list-item w-dyn-item"><a
+                    <!-- <div role="listitem" class="service-collection-list-item w-dyn-item"><a
                         data-w-id="05d01ac5-14be-6d7e-0263-2a06a425938d" href="service/financial-consulting.html"
                         class="service-card w-inline-block">
                         <div class="service-content-wrapper">
@@ -411,7 +411,7 @@
                               class="service-inner-line"></div>
                           </div>
                         </div>
-                      </a></div>
+                      </a></div> -->
                   </div>
                 </div>
               </div>
@@ -456,12 +456,10 @@
               <div id="w-node-bde9efe0-efa4-6791-4c9c-683e7823abc9-7823abab" class="footer-link-list-wrapper">
                 <div class="footer-header-text">Pages</div>
                 <div class="footer-link-list"><a href="index.html" class="footer-link">Home</a><a href="about.html"
-                    class="footer-link">About</a><a href="pricing.html" class="footer-link">Pricing</a><a
-                    href="product/basic-plan.html" class="footer-link">Pricing single</a><a href="contact-page.html"
-                    class="footer-link">Contact</a><a href="team.html" class="footer-link">Team</a><a
-                    href="team-member/sarah-mitchell-mba-2.html" class="footer-link">Team details</a></div>
+                    class="footer-link">About</a><a href="pricing.html" class="footer-link">Pricing</a><a href="contact-page.html"
+                    class="footer-link">Contact</a><a href="team.html" class="footer-link">Team</a></div>
               </div>
-              <div id="w-node-bde9efe0-efa4-6791-4c9c-683e7823abdb-7823abab" class="footer-link-list-wrapper">
+              <!-- <div id="w-node-bde9efe0-efa4-6791-4c9c-683e7823abdb-7823abab" class="footer-link-list-wrapper">
                 <div class="footer-header-text">CMS pages</div>
                 <div class="footer-link-list"><a href="blog.html" class="footer-link">Blog posts</a><a
                     href="blog/the-importance-of-financial-transparency-in-business-success.html"
@@ -477,7 +475,7 @@
                     href="change-log.html" class="footer-link">Changelog</a><a href="license.html"
                     class="footer-link">Licenses</a><a href="404.html" class="footer-link">Protected</a><a
                     href="401.html" class="footer-link">404 not found</a></div>
-              </div>
+              </div> -->
             </div>
             <div class="footer-line"></div>
             <div class="footer-bottom-content">
