--- a/probalance.webflow.io/team.html
+++ b/probalance.webflow.io/team.html
@@ -266,90 +266,178 @@
                 class="team-collection-list-wrapper w-dyn-list">
                 <div role="list" class="team-collection-list w-dyn-items">
                   <div role="listitem" class="team-collection-list-item w-dyn-item"><a
-                      href="team-member/john-anderson-cpa-2.html" class="team-card w-inline-block"><img loading="lazy"
-                        src="../cdn.prod.website-files.com/665d35c81c0aabc1cd692224/665ec78d21608391fe776ea2_Team%20Thumbnail%20Image%2004.png"
+                      class="team-card w-inline-block"><img loading="lazy"
+                        src="../assets/ceo.jpg" height="250px"
                         alt="" class="team-image" />
                       <div class="team-card-content">
                         <div class="team-card-top-details">
-                          <h6 class="heading-style-h6">John Anderson, CPA</h6>
+                          <h6 class="heading-style-h6">Gospel Obi</h6>
                           <div class="text-size-tiny">Founder &amp; CEO</div>
                         </div>
                         <div class="team-card-expertise-wrapper">
                           <div class="team-card-expertise">
-                            <div>Financial strategy</div>
+                            <div>Chief Team Lead</div>
                           </div>
                           <div class="team-card-expertise">
-                            <div>Industry leadership</div>
+                            <div>Founder</div>
                           </div>
-                          <div class="team-card-expertise">
+                          <!-- <div class="team-card-expertise">
                             <div>Business development</div>
+                          </div> -->
+                        </div>
+                      </div>
+                    </a></div>
+                  <div role="listitem" class="team-collection-list-item w-dyn-item"><a
+                      class="team-card w-inline-block"><img loading="lazy"
+                        src="../assets/chika4.jpg" height="250px"
+                        alt="" class="team-image" />
+                      <div class="team-card-content">
+                        <div class="team-card-top-details">
+                          <h6 class="heading-style-h6">Chikeluba Chika</h6>
+                          <div class="text-size-tiny">Technical Support Engineer</div>
+                        </div>
+                        <div class="team-card-expertise-wrapper">
+                          <div class="team-card-expertise">
+                            <div>Technology</div>
+                          </div>
+                          <div class="team-card-expertise">
+                            <div>HR</div>
+                          </div>
+                          <div class="team-card-expertise">
+                            <div>Engineering</div>
                           </div>
                         </div>
                       </div>
                     </a></div>
                   <div role="listitem" class="team-collection-list-item w-dyn-item"><a
-                      href="team-member/sarah-mitchell-mba-2.html" class="team-card w-inline-block"><img loading="lazy"
-                        src="../cdn.prod.website-files.com/665d35c81c0aabc1cd692224/665ec75b2560d094bc5aaf5b_Team%20Thumbnail%20Image%2003.png"
+                      class="team-card w-inline-block"><img loading="lazy"
+                        src="../assets/Stella Ogaziechi.JPG" height="250px"
                         alt="" class="team-image" />
                       <div class="team-card-content">
                         <div class="team-card-top-details">
-                          <h6 class="heading-style-h6">Sarah Mitchell, MBA</h6>
-                          <div class="text-size-tiny">Chief Financial Officer</div>
+                          <h6 class="heading-style-h6">Stella Ogaziechi</h6>
+                          <div class="text-size-tiny">Graphic Designer</div>
                         </div>
                         <div class="team-card-expertise-wrapper">
                           <div class="team-card-expertise">
-                            <div>Financial analysis</div>
+                            <div>Design</div>
                           </div>
-                          <div class="team-card-expertise">
-                            <div>Strategic planning</div>
-                          </div>
-                          <div class="team-card-expertise">
-                            <div>Operational optimization</div>
-                          </div>
-                        </div>
-                      </div>
-                    </a></div>
-                  <div role="listitem" class="team-collection-list-item w-dyn-item"><a
-                      href="team-member/john-anderson-cpa.html" class="team-card w-inline-block"><img loading="lazy"
-                        src="../cdn.prod.website-files.com/665d35c81c0aabc1cd692224/665ec70cba3017e2b770c875_Team%20Thumbnail%20Image%2002.png"
-                        alt="" class="team-image" />
-                      <div class="team-card-content">
-                        <div class="team-card-top-details">
-                          <h6 class="heading-style-h6">John Anderson, CPA</h6>
-                          <div class="text-size-tiny">Financial Analyst</div>
-                        </div>
-                        <div class="team-card-expertise-wrapper">
-                          <div class="team-card-expertise">
-                            <div>Tax planning</div>
-                          </div>
-                          <div class="team-card-expertise">
+                          <!-- <div class="team-card-expertise">
                             <div>Auditing</div>
                           </div>
                           <div class="team-card-expertise">
                             <div>Regulatory compliance</div>
-                          </div>
+                          </div> -->
                         </div>
                       </div>
                     </a></div>
                   <div role="listitem" class="team-collection-list-item w-dyn-item"><a
-                      href="team-member/sarah-mitchell-mba.html" class="team-card w-inline-block"><img loading="lazy"
-                        src="../cdn.prod.website-files.com/665d35c81c0aabc1cd692224/665ec6ab9dc8ff18b06eabfc_Team%20Thumbnail%20Image%2001.png"
+                     class="team-card w-inline-block"><img loading="lazy"
+                        src="../assets/Ogwulumba Valentine .jpg" height="250px"
                         alt="" class="team-image" />
                       <div class="team-card-content">
                         <div class="team-card-top-details">
-                          <h6 class="heading-style-h6">Sarah Mitchell, MBA</h6>
-                          <div class="text-size-tiny">Chief Financial Officer</div>
+                          <h6 class="heading-style-h6">Ogwulumba Valentine</h6>
+                          <div class="text-size-tiny">Digital Marketing</div>
                         </div>
                         <div class="team-card-expertise-wrapper">
                           <div class="team-card-expertise">
-                            <div>Financial modelling</div>
+                            <div>Marketing</div>
                           </div>
-                          <div class="team-card-expertise">
+                          <!-- <div class="team-card-expertise">
                             <div>Budgeting</div>
                           </div>
                           <div class="team-card-expertise">
                             <div>Forecasting</div>
+                          </div> -->
+                        </div>
+                      </div>
+                    </a></div>
+                    <div role="listitem" class="team-collection-list-item w-dyn-item"><a
+                      class="team-card w-inline-block"><img loading="lazy"
+                        src="../assets/Glory Alphonsus.JPG" height="250px"
+                        alt="" class="team-image" />
+                      <div class="team-card-content">
+                        <div class="team-card-top-details">
+                          <h6 class="heading-style-h6">Glory Alphonsus</h6>
+                          <div class="text-size-tiny">Fullstack Developer</div>
+                        </div>
+                        <div class="team-card-expertise-wrapper">
+                          <div class="team-card-expertise">
+                            <div>Technology</div>
                           </div>
+                          <div class="team-card-expertise">
+                            <div>Engineering</div>
+                          </div>
+                          <!-- <div class="team-card-expertise">
+                            <div>Forecasting</div>
+                          </div> -->
+                        </div>
+                      </div>
+                    </a></div>
+                    <div role="listitem" class="team-collection-list-item w-dyn-item"><a
+                      class="team-card w-inline-block"><img loading="lazy"
+                        src="../assets/Ekong Victory.png" height="250px"
+                        alt="" class="team-image" />
+                      <div class="team-card-content">
+                        <div class="team-card-top-details">
+                          <h6 class="heading-style-h6">Ekong Victory</h6>
+                          <div class="text-size-tiny">Graphic Designer</div>
+                        </div>
+                        <div class="team-card-expertise-wrapper">
+                          <div class="team-card-expertise">
+                            <div>Design</div>
+                          </div>
+                          <!-- <div class="team-card-expertise">
+                            <div>Budgeting</div>
+                          </div>
+                          <div class="team-card-expertise">
+                            <div>Forecasting</div>
+                          </div> -->
+                        </div>
+                      </div>
+                    </a></div>
+                    <div role="listitem" class="team-collection-list-item w-dyn-item"><a
+                      class="team-card w-inline-block"><img loading="lazy"
+                        src="../assets/Oludimu_Eunice_n.jpg" height="250px"
+                        alt="" class="team-image" />
+                      <div class="team-card-content">
+                        <div class="team-card-top-details">
+                          <h6 class="heading-style-h6">Oludimu Eunice</h6>
+                          <div class="text-size-tiny">Content Writer</div>
+                        </div>
+                        <div class="team-card-expertise-wrapper">
+                          <div class="team-card-expertise">
+                            <div>Contents</div>
+                          </div>
+                          <!-- <div class="team-card-expertise">
+                            <div>Budgeting</div>
+                          </div>
+                          <div class="team-card-expertise">
+                            <div>Forecasting</div>
+                          </div> -->
+                        </div>
+                      </div>
+                    </a></div>
+                    <div role="listitem" class="team-collection-list-item w-dyn-item"><a
+                      class="team-card w-inline-block"><img loading="lazy"
+                        src="../assets/Dinobi.jpg" height="250px"
+                        alt="" class="team-image" />
+                      <div class="team-card-content">
+                        <div class="team-card-top-details">
+                          <h6 class="heading-style-h6">Dinobi Udeh</h6>
+                          <div class="text-size-tiny">Software Engineer</div>
+                        </div>
+                        <div class="team-card-expertise-wrapper">
+                          <div class="team-card-expertise">
+                            <div>Technology</div>
+                          </div>
+                          <div class="team-card-expertise">
+                            <div>Engineering</div>
+                          </div>
+                          <!-- <div class="team-card-expertise">
+                            <div>Forecasting</div>
+                          </div> -->
                         </div>
                       </div>
                     </a></div>
@@ -375,8 +463,7 @@
               <div id="w-node-bde9efe0-efa4-6791-4c9c-683e7823abb9-7823abab" class="footer-left-content-wrapper">
                 <div class="footer-content">
                   <h5 class="heading-style-h5 text-color-white">Newsletter</h5>
-                  <p class="text-size-tiny text-color-white-300">Rorem ipsum dolor sit amet consectetur. Nisl urna
-                    dignissim ultricies lobortis.</p>
+                  <p class="text-size-tiny text-color-white-300">Signup for our Newsletter.</p>
                 </div>
                 <div class="footer-form-block w-form">
                   <form id="email-form" name="email-form" data-name="Email Form" method="get" class="footer-form"
@@ -396,13 +483,11 @@
               <div id="w-node-bde9efe0-efa4-6791-4c9c-683e7823abc9-7823abab" class="footer-link-list-wrapper">
                 <div class="footer-header-text">Pages</div>
                 <div class="footer-link-list"><a href="index.html" class="footer-link">Home</a><a href="about.html"
-                    class="footer-link">About</a><a href="pricing.html" class="footer-link">Pricing</a><a
-                    href="product/basic-plan.html" class="footer-link">Pricing single</a><a href="contact-page.html"
+                    class="footer-link">About</a><a href="pricing.html" class="footer-link">Pricing</a><a href="contact-page.html"
                     class="footer-link">Contact</a><a href="team.html" aria-current="page"
-                    class="footer-link w--current">Team</a><a href="team-member/sarah-mitchell-mba-2.html"
-                    class="footer-link">Team details</a></div>
+                    class="footer-link w--current">Team</a></div>
               </div>
-              <div id="w-node-bde9efe0-efa4-6791-4c9c-683e7823abdb-7823abab" class="footer-link-list-wrapper">
+              <!-- <div id="w-node-bde9efe0-efa4-6791-4c9c-683e7823abdb-7823abab" class="footer-link-list-wrapper">
                 <div class="footer-header-text">CMS pages</div>
                 <div class="footer-link-list"><a href="blog.html" class="footer-link">Blog posts</a><a
                     href="blog/the-importance-of-financial-transparency-in-business-success.html"
@@ -417,7 +502,7 @@
                     href="change-log.html" class="footer-link">Changelog</a><a href="license.html"
                     class="footer-link">Licenses</a><a href="404.html" class="footer-link">Protected</a><a
                     href="401.html" class="footer-link">404 not found</a></div>
-              </div>
+              </div> -->
             </div>
             <div class="footer-line"></div>
             <div class="footer-bottom-content">
