--- a/probalance.webflow.io/about.html
+++ b/probalance.webflow.io/about.html
@@ -385,7 +385,7 @@ We pride ourselves as, the chief digital team for your business that will enable
               <div data-w-id="2c2a10d4-2b2c-8463-9d79-fc0201062bd8" class="team-collection-list-wrapper w-dyn-list">
                 <div role="list" class="team-collection-list w-dyn-items">
                   <div role="listitem" class="team-collection-list-item w-dyn-item"><a
-                      href="team-member/john-anderson-cpa-2.html" class="team-card w-inline-block"><img
+                      class="team-card w-inline-block"><img
                         src="../assets/ceo.jpg" height="250px"
                         loading="lazy" alt="" class="team-image" />
                       <div class="team-card-content">
@@ -407,7 +407,7 @@ We pride ourselves as, the chief digital team for your business that will enable
                       </div>
                     </a></div>
                   <div role="listitem" class="team-collection-list-item w-dyn-item"><a
-                      href="team-member/sarah-mitchell-mba-2.html" class="team-card w-inline-block"><img
+                     class="team-card w-inline-block"><img
                         src="../assets/chika4.jpg" height="250px"
                         loading="lazy" alt="" class="team-image" />
                       <div class="team-card-content">
@@ -642,8 +642,7 @@ We pride ourselves as, the chief digital team for your business that will enable
               <div id="w-node-bde9efe0-efa4-6791-4c9c-683e7823abb9-7823abab" class="footer-left-content-wrapper">
                 <div class="footer-content">
                   <h5 class="heading-style-h5 text-color-white">Newsletter</h5>
-                  <p class="text-size-tiny text-color-white-300">Rorem ipsum dolor sit amet consectetur. Nisl urna
-                    dignissim ultricies lobortis.</p>
+                  <p class="text-size-tiny text-color-white-300">Subscribe to our newsletter.</p>
                 </div>
                 <div class="footer-form-block w-form">
                   <form id="email-form" name="email-form" data-name="Email Form" method="get" class="footer-form"
@@ -664,12 +663,10 @@ We pride ourselves as, the chief digital team for your business that will enable
                 <div class="footer-header-text">Pages</div>
                 <div class="footer-link-list"><a href="index.html" class="footer-link">Home</a><a href="about.html"
                     aria-current="page" class="footer-link w--current">About</a><a href="pricing.html"
-                    class="footer-link">Pricing</a><a href="product/basic-plan.html" class="footer-link">Pricing
-                    single</a><a href="contact-page.html" class="footer-link">Contact</a><a href="team.html"
-                    class="footer-link">Team</a><a href="team-member/sarah-mitchell-mba-2.html" class="footer-link">Team
-                    details</a></div>
+                    class="footer-link">Pricing</a><a href="contact-page.html" class="footer-link">Contact</a><a href="team.html"
+                    class="footer-link">Team</a></div>
               </div>
-              <div id="w-node-bde9efe0-efa4-6791-4c9c-683e7823abdb-7823abab" class="footer-link-list-wrapper">
+              <!-- <div id="w-node-bde9efe0-efa4-6791-4c9c-683e7823abdb-7823abab" class="footer-link-list-wrapper">
                 <div class="footer-header-text">CMS pages</div>
                 <div class="footer-link-list"><a href="blog.html" class="footer-link">Blog posts</a><a
                     href="blog/the-importance-of-financial-transparency-in-business-success.html"
@@ -684,7 +681,7 @@ We pride ourselves as, the chief digital team for your business that will enable
                     href="change-log.html" class="footer-link">Changelog</a><a href="license.html"
                     class="footer-link">Licenses</a><a href="404.html" class="footer-link">Protected</a><a
                     href="401.html" class="footer-link">404 not found</a></div>
-              </div>
+              </div> -->
             </div>
             <div class="footer-line"></div>
             <div class="footer-bottom-content">
